<resources>
    <string name="app_name">Liber</string>
    <string name="search_field_label">Search by book title, author or isbn</string>
    <string name="search_max_results_spinner_label">Max Results</string>
    <string name="payment_title">Order Summary</string>
    <string name="no_connection_message">No connection</string>
    <string name="no_connection_icon_description">A disabled Wi-fi signal</string>
    <string name="something_wrong_description">Oops! Something went wrong</string>
    <string name="search_hint">Search your book to upload on shelf</string>
    <string name="empty_results_message">Nothing found</string>
    <string name="empty_results_icon_description">A crying face</string>
    <string name="rent">Rent</string>
    <string name="available">Available</string>
    <string name="unknown">Locating..</string>
    <string name="rented">Rented</string>
    <string name="due_date"></string>
    <string name="tag_line">Share the joy of reading</string>
    <string name="empty_mesg">Your bookshelf is empty. Start stacking your books for others to read.</string>
    <string name="cover_label">Picture</string>
    <string name="rent_it_label">Rent Now</string>
    <string name="book_upload_help">\u2022 Use the search bar to search for details of the book you want to make available for others to rent.</string>
    <string name="book_upload_confirm">\u2022 By uploading a book, you confirm to have a physical copy of the same book.</string>
    <string name="bookshelf_upload_help">Your shelf is empty.</string>
    <string name="bookshelf_empty_confirm">\u2022 Add your books and make it available for others to rent it.</string>
    <string name="bookshelf_empty_confirm2">\u2022 See the book you are reading here.</string>
    <string-array name="max_results">
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>
    <string name="otp_verify_title1">Enter OTP Code</string>
    <string name="otp_verify_title2">If not detected automatically, please type the verification code sent to mobile number </string>
    <string name="otp_title1">Enter your mobile number</string>
    <string name="otp_title2">Tap Next to verify your account with your phone number. We will send a One Time SMS to this number.</string>
    <string name="order_complete">Order placed</string>
    <string name="wallet_amount">10</string>
    <string name="wallet_chckbox_str"> Use Liber wallet money.</string>
    <string name="wallet_rupee_sign">₹ </string>
    <string name="week_2">Two weeks</string>
    <string name="month_1">One month (+₹10)</string>
    <string name="month_2">Two months (+₹15)</string>
    <string name="wallet_subtitle">Get your books to work. Upload them on Liber and earn ₹3 on every book upload and more on rental.</string>
    <string name="order_subtitle">Book will be delivered to you by tomorrow. Our executive will contact you soon for delivery. Check order summary to track your order.</string>
    <string name="processing_label">Loading...</string>
    <string name="register_label">Saving Details...</string>
    <string name="wallet_processing_label">Loading Wallet...</string>
    <string name="wallet_amount_per_book">3</string>
    <string name="processing_txn_label">Processing..</string>
    <string name="processing_bookshelf_label">Loading your bookshelf..</string>
    <string name="deleting_bookshelf_label">Updating your bookshelf..</string>
    <string name="processing_review_upload_label">Saving review</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="need_help">Need Help? Contact us.</string>
    <string name="cash_mode_mesg">Please keep the cash amount ready at the time of receiving the book.</string>
    <string name="noncash_mode_mesg">Payment Received</string>
    <string name="title_activity_select_payment">Select payment option</string>
    <string name="title_activity_tempactivity">tempactivity</string>
    <string name="rating_default">Rate this book</string>
    <string name="rating_1">Duh! Never judge a book by it\'s cover</string>
    <string name="rating_2">Bad</string>
    <string name="rating_3">Ok</string>
    <string name="rating_4">Good</string>
    <string name="rating_5">Awesome! A must read</string>
    <string name="reader_avatar_desc">profile picture</string>
    <string name="me_profile_photo">Profile Photo</string>
    <string name="my_profile">My Profile</string>
    <string name="my_notification">Notification Setting</string>
    <string name="change_photo">Change photo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="public_display_name">Mobile No.</string>
    <string name="email_id">Email</string>
    <string name="address">Address</string>
    <string name="me_title">Me</string>
    <string name="public_display_name_hint">Display name will default to your username if it is not set</string>
    <string name="no_network_message">There is no network available</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="api_key">AIzaSyDZAU8Mgv6BxcSxtyV98G_X0FpsMS4MnbQ</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="title_activity_otpverification">OTPVerification</string>
</resources>
