<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/me_title"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:id="@+id/first_name_row"
            style="@style/MyProfileRow"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                style="@style/MyProfileLabel"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/first_name"
                android:hint="@string/first_name"
                android:background="@android:color/transparent"
                style="@style/MyProfileText" />

        </LinearLayout>

        <View style="@style/MyProfileDividerView" />

        <LinearLayout
            android:id="@+id/last_name_row"
            style="@style/MyProfileRow">

            <TextView
                style="@style/MyProfileLabel"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/last_name"
                android:hint="@string/last_name"
                android:background="@android:color/transparent"
                style="@style/MyProfileText" />

        </LinearLayout>

        <View style="@style/MyProfileDividerView" />

        <LinearLayout
            android:id="@+id/display_name_row"
            style="@style/MyProfileRow">

            <TextView
                style="@style/MyProfileLabel"
                android:text="@string/public_display_name" />

            <EditText
                android:id="@+id/display_name"
                android:hint="@string/public_display_name"
                android:inputType="phone"
                android:maxLength="10"
                android:background="@android:color/transparent"
                style="@style/MyProfileText" />

        </LinearLayout>

        <View style="@style/MyProfileDividerView" />

    <LinearLayout
        android:id="@+id/emailid_row"
        style="@style/MyProfileRow">

        <TextView
            style="@style/MyProfileLabel"
            android:text="@string/email_id" />

        <EditText
            android:id="@+id/emailid_name"
            android:hint="@string/email_id"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"
            style="@style/MyProfileText" />

    </LinearLayout>

    <View style="@style/MyProfileDividerView" />

    <LinearLayout
        android:id="@+id/address_row"
        style="@style/MyProfileRow">

        <TextView
            style="@style/MyProfileLabel"
            android:text="@string/address" />

        <TextView
            android:id="@+id/address_name"
            style="@style/MyProfileText" />

    </LinearLayout>

    <View style="@style/MyProfileDividerView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/save_profile_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:focusable="false"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:text="@string/save"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>