<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".BookListActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarColor"
            app:popupTheme="@style/AppTheme"
            >
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--&gt;-->
                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:orientation="horizontal">-->

                    <EditText
                        android:id="@+id/search_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="@dimen/search_field_right_margin"
                        android:cursorVisible="false"
                        android:hint="@string/search_field_label"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/book_search_text"
                        android:textColorHint="@color/book_search_hint" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search"/>
                <!--</LinearLayout>-->

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/empty_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/empty_results_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center_horizontal"
                android:text="@string/empty_results_message"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/empty_results_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/book_list_top_margin"
                android:background="@drawable/crying"
                android:contentDescription="@string/empty_results_icon_description"
                android:gravity="center"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/empty_results_mesg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/book_upload_help_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/book_upload_help"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/book_upload_confirm_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/book_upload_confirm"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textAlignment="textStart"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_connection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/no_connection_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center_horizontal"
                android:text="@string/no_connection_message"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/no_connection_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/book_list_top_margin"
                android:background="@drawable/no_connection"
                android:contentDescription="@string/no_connection_icon_description"
                android:gravity="center"
                android:scaleType="centerCrop" />
        </LinearLayout>
        <fragment
            android:name="org.app.liber.BookListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="booksList"
            tools:layout="@layout/fragment_booklist_list" />
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>