<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/empty_bookshelf_mesg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/empty_results_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/shelf"
            android:scaleType="centerCrop" />
        <TextView
            android:id="@+id/book_upload_help_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/bookshelf_upload_help"
            android:textColor="@color/navy"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/book_upload_confirm_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/bookshelf_empty_confirm"
            android:textSize="15sp"
            android:textAlignment="textStart"
            />

        <TextView
            android:id="@+id/book_upload_confirm2_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/bookshelf_empty_confirm2"
            android:textSize="15sp"
            android:textAlignment="textStart"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bookshelve_recyclerview"
        >
    </android.support.v7.widget.RecyclerView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addAgainfloatingActionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="28dp"
        app:elevation="6dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/colorPrimary"
        app:pressedTranslationZ="12dp"
        android:onClick="addBookAgainToShelf"
        />
</RelativeLayout>