<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginEnd="@dimen/content_margin"
                android:layout_marginStart="@dimen/content_margin"
                android:layout_marginTop="@dimen/margin_large">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_extra_medium_large">

                    <FrameLayout
                        android:id="@+id/frame_avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true">

                        <FrameLayout
                            android:id="@+id/avatar_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/me_profile_photo">

                            <ImageView
                                android:id="@+id/me_avatar"
                                android:layout_width="@dimen/avatar_sz_inner_circle"
                                android:layout_height="@dimen/avatar_sz_inner_circle"
                                android:background="@drawable/default_user"
                                android:contentDescription="@string/reader_avatar_desc"/>
                        </FrameLayout>

                        <ProgressBar
                            android:id="@+id/avatar_progress"
                            style="@android:style/Widget.Holo.ProgressBar"
                            android:layout_width="@dimen/avatar_sz_inner_circle"
                            android:layout_height="@dimen/avatar_sz_inner_circle"
                            android:background="@drawable/bg_oval_black_translucent_50"
                            android:layout_gravity="center"
                            android:padding="@dimen/margin_large"
                            android:indeterminate="true"
                            android:clickable="true"
                            android:focusable="true"
                            android:visibility="gone"
                            tools:visibility="visible"/>
                    </FrameLayout>

                    <TextView
                        android:id="@+id/change_photo"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/frame_avatar"
                        android:textColor="@color/primary_500"
                        android:padding="8dp"
                        android:textAllCaps="true"
                        android:textSize="10sp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/change_photo"
                        tools:text="Change photo"
                        tools:ignore="SmallSp"/>

                    <TextView
                        android:id="@+id/me_display_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/change_photo"
                        android:layout_marginTop="8dp"
                        android:layout_centerHorizontal="true"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:textColor="@color/neutral_700"
                        android:textSize="@dimen/text_sz_large"
                        android:textStyle="bold"
                        tools:text="Full Name" />

                    <TextView
                        android:id="@+id/me_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/me_display_name"
                        android:layout_centerHorizontal="true"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/neutral_500"
                        android:textSize="@dimen/text_sz_medium"
                        tools:text="username" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/row_my_profile"
                style="@style/MeListRowLayout">

                <ImageView
                    android:id="@+id/me_my_profile_icon"
                    style="@style/MeListRowIcon"
                    android:src="@drawable/ic_user_white_24dp"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/me_my_profile_text_view"
                    style="@style/MeListRowTextView"
                    android:text="@string/my_profile" />

            </LinearLayout>

            <View style="@style/MeListSectionDividerView" />
            <LinearLayout
                android:id="@+id/row_my_notification"
                style="@style/MeListRowLayout">

                <ImageView
                    android:id="@+id/me_my_notification_icon"
                    style="@style/MeListRowIcon"
                    android:src="@drawable/ic_notifications"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/me_my_notification_text_view"
                    style="@style/MeListRowTextView"
                    android:text="@string/my_notification" />

            </LinearLayout>

            <View style="@style/MeListSectionDividerView" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
