<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#00ffffff"
    android:padding="16dp"
    android:fitsSystemWindows="true">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:focusable="false"
        android:background="@color/white"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="1dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:gravity="left|center"
            android:background="@color/colorPrimary"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select rental days "
                android:layout_marginLeft="12dp"
                style="@style/Liber.TextView.Heading"
                android:textSize="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingRight="24dp"
            android:paddingTop="18dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

            <RadioButton
                android:id="@+id/two_weeks_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/week_2"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <RadioButton
                android:id="@+id/one_month_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:checked="false"
                android:text="@string/month_1"
                android:textColor="#000000"
                android:textSize="15sp"
                />

            <RadioButton
                android:id="@+id/two_months_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:checked="false"
                android:text="@string/month_2"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginBottom="2dp"

                >
                <Button
                    android:id="@+id/submit_tenure_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/selector"
                    android:textStyle="bold"
                    android:text="Done"

                    android:layout_marginRight="5dp"
                    />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>